update trade war

--- a/Trade_war_US_China.ipynb
+++ b/Trade_war_US_China.ipynb
@@ -3856,8 +3856,69 @@
    "source": [
     "In this dramatic bar chart, we see China leading the world's net trade with the highest trade surplus, and the US on the opposite end leading the world with the highest trade deficit.\n",
     "\n",
-    "The preceding three bar charts illustrate the power of the US and Chinese economies. The two countries lead the world in both exports and imports, and all countries fall somewhere in between the two in terms of net trade.\n",
+    "The preceding three bar charts illustrate the power of the US and Chinese economies. The two countries lead the world in both exports and imports, and all countries fall somewhere in between the two in terms of net trade."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We wish to visualize this global trade situation in a more compelling way. Let's use the package `folium` and a set of world coordinates to accomplish this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.7/site-packages/IPython/core/display.py:689: UserWarning: Consider using IPython.display.IFrame instead\n",
+      "  warnings.warn(\"Consider using IPython.display.IFrame instead\")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=plot_data.html width=700 height=450></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import folium\n",
+    "country_geo = './world-countries.json'\n",
+    "map = folium.Map(location=[50,0], zoom_start=1.4)\n",
+    "folium.Choropleth(geo_data=country_geo, data=stage1_netTrade_2013,\n",
+    "              columns=['CountryCode','NetTrade'],\n",
+    "              fill_color='PiYG', nan_fill_color='bdbdbd', \n",
+    "                  key_on='feature.id', fill_opacity=0.7, line_opacity=0.2).add_to(map)\n",
+    "map.save('plot_data.html')\n",
+    "from IPython.display import HTML\n",
+    "HTML('<iframe src=plot_data.html width=700 height=450></iframe>')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This simple interactive map shows countries in deficit in red and countries in surplus in green. Countries wihtout data are marked in dark grey. \n",
     "\n",
+    "Here, you can see how the US and China stack up to the rest of the world."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Altogether, this analysis shows that the US and China hold important positions in terms of international trade."
    ]
   },
@@ -3884,7 +3945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
